-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9, 11, 16, 17
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8263290 | 16.0.2 | Aleksey Shipilev | P2 | Resolved | Fixed | b01 |
| JDK-8262962 | 16.0.1 | Aleksey Shipilev | P2 | Closed | Fixed | b08 |
| JDK-8263076 | 15.0.3 | Aleksey Shipilev | P2 | Resolved | Fixed | b01 |
| JDK-8262455 | 11.0.12-oracle | Dukebot | P2 | Closed | Fixed | b01 |
| JDK-8262727 | 11.0.11 | Aleksey Shipilev | P2 | Resolved | Fixed | b05 |
- backported by
-
JDK-8262727 Code IfNode::fold_compares_helper more defensively
-
- Resolved
-
-
JDK-8263076 Code IfNode::fold_compares_helper more defensively
-
- Resolved
-
-
JDK-8263290 Code IfNode::fold_compares_helper more defensively
-
- Resolved
-
-
JDK-8262455 Code IfNode::fold_compares_helper more defensively
-
- Closed
-
-
JDK-8262962 Code IfNode::fold_compares_helper more defensively
-
- Closed
-
- relates to
-
JDK-8261914 IfNode::fold_compares_helper faces non-canonicalized bool when running JRuby JSON workload
-
- Closed
-
-
JDK-8073480 C2 should optimize explicit range checks
-
- Resolved
-
- links to
-
Commit
openjdk/jdk16u/6be71baf
-
Commit
openjdk/jdk/e9f3aab7
-
Review
openjdk/jdk16u/48
-
Review
openjdk/jdk/2610