8261912: Code IfNode::fold_compares_helper more defensively

Reviewed-by: kvn, thartmann